# job-search-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: ats_boards.yaml  extra_boards.yaml  search_config.yaml
scripts/: com.jaydreyer.jobsearch-server.plist  com.jaydreyer.jobsearch.plist  run_daily.sh  serve.sh
src/job_search_agent/: __init__.py  cli.py  config.py  digest.py  feedback.py  feedback_cli.py  models.py  pipeline.py  scoring.py  status.py  store.py
src/job_search_agent/agent/: __init__.py  discover.py  dryrun.py  prompt.py  run_session.py  setup.py  tools.py
src/job_search_agent/sources/: adzuna.py  base.py
src/job_search_agent/sources/ats/: __init__.py  ashby.py  greenhouse.py  lever.py  workable.py  workday.py
src/job_search_agent/web/: __init__.py  dashboard.py  serve.py
